Add 2025 Rd16 Italian GP Race

--- a/index.html
+++ b/index.html
@@ -209,6 +209,16 @@ PDF</a><br />
 laptime csv</a><br />
 <a href="./2025/2025-Rd16-Italian-Grand-Prix-Qualifying_rcm.csv">Q: race
 control message csv</a></p>
+<p><a href="./2025/2025-Rd16-Italian-Grand-Prix-Race.pdf">R:Plots
+PDF</a><br />
+<a href="./2025/2025-Rd16-Italian-Grand-Prix-Race_gaptime.csv">R:GapTime
+CSV </a><br />
+<a href="./2025/2025-Rd16-Italian-Grand-Prix-Race_laptime.csv">R:ALL
+LapTime CSV</a><br />
+<a href="./2025/2025-Rd16-Italian-Grand-Prix-Race_rcm.csv">R:Race
+Control Message CSV</a><br />
+<a href="https://youtu.be/tK2MeL8c098?si=GErzJTL2uP7xuD2B">GAP Graph
+animation</a></p>
 <h2 data-number="1.2" id="rd15-dutch-grand-prix"><span
 class="header-section-number">1.2</span> Rd15 Dutch Grand Prix</h2>
 <p><a href="./2025/2025-Rd15-Dutch-Grand-Prix-Practice-1.pdf">FP1: Plot
