--- a/index.html
+++ b/index.html
@@ -212,6 +212,16 @@ href="./2025/2025-Rd17-Azerbaijan-Grand-Prix-Qualifying_laptime.csv">Q:
 laptime csv</a><br />
 <a href="./2025/2025-Rd17-Azerbaijan-Grand-Prix-Qualifying_rcm.csv">Q:
 race control message csv</a></p>
+<p><a href="./2025/2025-Rd17-Azerbaijan-Grand-Prix-Race.pdf">R:Plots
+PDF</a><br />
+<a
+href="./2025/2025-Rd17-Azerbaijan-Grand-Prix-Race_gaptime.csv">R:GapTime
+CSV </a><br />
+<a href="./2025/2025-Rd17-Azerbaijan-Grand-Prix-Race_laptime.csv">R:ALL
+LapTime CSV</a><br />
+<a href="./2025/2025-Rd17-Azerbaijan-Grand-Prix-Race_rcm.csv">R:Race
+Control Message CSV</a><br />
+<a href="https://youtu.be/1LDKJ6FpTyo">GAP Graph animation</a></p>
 <h2 data-number="1.2" id="rd16-italian-grand-prix"><span
 class="header-section-number">1.2</span> Rd16 Italian Grand Prix</h2>
 <p><a
