--- a/index.html
+++ b/index.html
@@ -235,6 +235,17 @@ laptime csv</a><br />
 <a
 href="./2025/2025-Rd19-United-States-Grand-Prix-Qualifying_rcm.csv">Q:
 race control message csv</a></p>
+<p><a href="./2025/2025-Rd19-United-States-Grand-Prix-Race.pdf">R:Plots
+PDF</a><br />
+<a
+href="./2025/2025-Rd19-United-States-Grand-Prix-Race_gaptime.csv">R:GapTime
+CSV </a><br />
+<a
+href="./2025/2025-Rd19-United-States-Grand-Prix-Race_laptime.csv">R:ALL
+LapTime CSV</a><br />
+<a href="./2025/2025-Rd19-United-States-Grand-Prix-Race_rcm.csv">R:Race
+Control Message CSV</a><br />
+<a href="https://youtu.be/U-_qTNeCgGg">GAP Graph animation</a></p>
 <h2 data-number="1.2" id="rd18-singapore-grand-prix"><span
 class="header-section-number">1.2</span> Rd18 Singapore Grand Prix</h2>
 <p><a href="./2025/2025-Rd18-Singapore-Grand-Prix-Practice-1.pdf">FP1:
