--- a/index.html
+++ b/index.html
@@ -36,70 +36,74 @@
 <li><a href="#season" id="toc-season"><span
 class="toc-section-number">1</span> 2025 Season</a>
 <ul>
+<li><a href="#rd20-mexico-city-grand-prix"
+id="toc-rd20-mexico-city-grand-prix"><span
+class="toc-section-number">1.1</span> Rd20 Mexico City Grand
+Prix</a></li>
 <li><a href="#rd19-united-states-grand-prix"
 id="toc-rd19-united-states-grand-prix"><span
-class="toc-section-number">1.1</span> Rd19 United States Grand
+class="toc-section-number">1.2</span> Rd19 United States Grand
 Prix</a></li>
 <li><a href="#rd18-singapore-grand-prix"
 id="toc-rd18-singapore-grand-prix"><span
-class="toc-section-number">1.2</span> Rd18 Singapore Grand Prix</a></li>
+class="toc-section-number">1.3</span> Rd18 Singapore Grand Prix</a></li>
 <li><a href="#rd17-azerbaijan-grand-prix"
 id="toc-rd17-azerbaijan-grand-prix"><span
-class="toc-section-number">1.3</span> Rd17 Azerbaijan Grand
+class="toc-section-number">1.4</span> Rd17 Azerbaijan Grand
 Prix</a></li>
 <li><a href="#rd16-italian-grand-prix"
 id="toc-rd16-italian-grand-prix"><span
-class="toc-section-number">1.4</span> Rd16 Italian Grand Prix</a></li>
+class="toc-section-number">1.5</span> Rd16 Italian Grand Prix</a></li>
 <li><a href="#rd15-dutch-grand-prix"
 id="toc-rd15-dutch-grand-prix"><span
-class="toc-section-number">1.5</span> Rd15 Dutch Grand Prix</a></li>
+class="toc-section-number">1.6</span> Rd15 Dutch Grand Prix</a></li>
 <li><a href="#rd14-hungarian-grand-prix"
 id="toc-rd14-hungarian-grand-prix"><span
-class="toc-section-number">1.6</span> Rd14 Hungarian Grand Prix</a></li>
+class="toc-section-number">1.7</span> Rd14 Hungarian Grand Prix</a></li>
 <li><a href="#rd13-belgian-grand-prix"
 id="toc-rd13-belgian-grand-prix"><span
-class="toc-section-number">1.7</span> Rd13 Belgian Grand Prix</a></li>
+class="toc-section-number">1.8</span> Rd13 Belgian Grand Prix</a></li>
 <li><a href="#rd12-british-grand-prix"
 id="toc-rd12-british-grand-prix"><span
-class="toc-section-number">1.8</span> Rd12 British Grand Prix</a></li>
+class="toc-section-number">1.9</span> Rd12 British Grand Prix</a></li>
 <li><a href="#rd11-austrian-grand-prix"
 id="toc-rd11-austrian-grand-prix"><span
-class="toc-section-number">1.9</span> Rd11 Austrian Grand Prix</a></li>
+class="toc-section-number">1.10</span> Rd11 Austrian Grand Prix</a></li>
 <li><a href="#rd10-canadian-grand-prix"
 id="toc-rd10-canadian-grand-prix"><span
-class="toc-section-number">1.10</span> Rd10 Canadian Grand Prix</a></li>
+class="toc-section-number">1.11</span> Rd10 Canadian Grand Prix</a></li>
 <li><a href="#rd09-spanish-grand-prix"
 id="toc-rd09-spanish-grand-prix"><span
-class="toc-section-number">1.11</span> Rd09 Spanish Grand Prix</a></li>
+class="toc-section-number">1.12</span> Rd09 Spanish Grand Prix</a></li>
 <li><a href="#rd08-monaco-grand-prix"
 id="toc-rd08-monaco-grand-prix"><span
-class="toc-section-number">1.12</span> Rd08 Monaco Grand Prix</a></li>
+class="toc-section-number">1.13</span> Rd08 Monaco Grand Prix</a></li>
 <li><a href="#rd07-emilia-romagna-grand-prix"
 id="toc-rd07-emilia-romagna-grand-prix"><span
-class="toc-section-number">1.13</span> Rd07 Emilia Romagna Grand
+class="toc-section-number">1.14</span> Rd07 Emilia Romagna Grand
 Prix</a></li>
 <li><a href="#rd06-miami-grand-prix"
 id="toc-rd06-miami-grand-prix"><span
-class="toc-section-number">1.14</span> Rd06 Miami Grand Prix</a></li>
+class="toc-section-number">1.15</span> Rd06 Miami Grand Prix</a></li>
 <li><a href="#rd05-saudi-arabian-grand-prix"
 id="toc-rd05-saudi-arabian-grand-prix"><span
-class="toc-section-number">1.15</span> Rd05 Saudi Arabian Grand
+class="toc-section-number">1.16</span> Rd05 Saudi Arabian Grand
 Prix</a></li>
 <li><a href="#rd04-bahrain-grand-prix"
 id="toc-rd04-bahrain-grand-prix"><span
-class="toc-section-number">1.16</span> Rd04 Bahrain Grand Prix</a></li>
+class="toc-section-number">1.17</span> Rd04 Bahrain Grand Prix</a></li>
 <li><a href="#rd03-japanese-grand-prix"
 id="toc-rd03-japanese-grand-prix"><span
-class="toc-section-number">1.17</span> Rd03 Japanese Grand Prix</a></li>
+class="toc-section-number">1.18</span> Rd03 Japanese Grand Prix</a></li>
 <li><a href="#rd02-chinese-grand-prix"
 id="toc-rd02-chinese-grand-prix"><span
-class="toc-section-number">1.18</span> Rd02 Chinese Grand Prix</a></li>
+class="toc-section-number">1.19</span> Rd02 Chinese Grand Prix</a></li>
 <li><a href="#rd01-australian-grand-prix"
 id="toc-rd01-australian-grand-prix"><span
-class="toc-section-number">1.19</span> Rd01 Australian Grand
+class="toc-section-number">1.20</span> Rd01 Australian Grand
 Prix</a></li>
 <li><a href="#pre-season-test" id="toc-pre-season-test"><span
-class="toc-section-number">1.20</span> Pre-season test</a></li>
+class="toc-section-number">1.21</span> Pre-season test</a></li>
 </ul></li>
 <li><a href="#season-1" id="toc-season-1"><span
 class="toc-section-number">2</span> 2024 season</a>
@@ -116,8 +120,8 @@ class="toc-section-number">2.3</span> Rd22 Las Vegas Grand Prix</a></li>
 <li><a href="#rd21-sao-paulo-grand-prix"
 id="toc-rd21-sao-paulo-grand-prix"><span
 class="toc-section-number">2.4</span> Rd21 Sao Paulo Grand Prix</a></li>
-<li><a href="#rd20-mexico-city-grand-prix"
-id="toc-rd20-mexico-city-grand-prix"><span
+<li><a href="#rd20-mexico-city-grand-prix-1"
+id="toc-rd20-mexico-city-grand-prix-1"><span
 class="toc-section-number">2.5</span> Rd20 Mexico City Grand
 Prix</a></li>
 <li><a href="#rd19-united-state-grand-prix"
@@ -192,8 +196,27 @@ class="toc-section-number">3</span> Previous season</a></li>
 </nav>
 <h1 data-number="1" id="season"><span
 class="header-section-number">1</span> 2025 Season</h1>
-<h2 data-number="1.1" id="rd19-united-states-grand-prix"><span
-class="header-section-number">1.1</span> Rd19 United States Grand
+<h2 data-number="1.1" id="rd20-mexico-city-grand-prix"><span
+class="header-section-number">1.1</span> Rd20 Mexico City Grand
+Prix</h2>
+<p><a href="./2025/2025-Rd20-Mexico-City-Grand-Prix-Practice-1.pdf">FP1:
+Plot PDF</a><br />
+<a
+href="./2025/2025-Rd20-Mexico-City-Grand-Prix-Practice-1_laptime.csv">FP1:
+laptime csv</a><br />
+<a
+href="./2025/2025-Rd20-Mexico-City-Grand-Prix-Practice-1_rcm.csv">FP1:
+race control message csv</a></p>
+<p><a href="./2025/2025-Rd20-Mexico-City-Grand-Prix-Practice-2.pdf">FP2:
+Plot PDF</a><br />
+<a
+href="./2025/2025-Rd20-Mexico-City-Grand-Prix-Practice-2_laptime.csv">FP2:
+laptime csv</a><br />
+<a
+href="./2025/2025-Rd20-Mexico-City-Grand-Prix-Practice-2_rcm.csv">FP2:
+race control message csv</a></p>
+<h2 data-number="1.2" id="rd19-united-states-grand-prix"><span
+class="header-section-number">1.2</span> Rd19 United States Grand
 Prix</h2>
 <p><a
 href="./2025/2025-Rd19-United-States-Grand-Prix-Practice-1.pdf">FP1:
@@ -246,8 +269,8 @@ LapTime CSV</a><br />
 <a href="./2025/2025-Rd19-United-States-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a><br />
 <a href="https://youtu.be/U-_qTNeCgGg">GAP Graph animation</a></p>
-<h2 data-number="1.2" id="rd18-singapore-grand-prix"><span
-class="header-section-number">1.2</span> Rd18 Singapore Grand Prix</h2>
+<h2 data-number="1.3" id="rd18-singapore-grand-prix"><span
+class="header-section-number">1.3</span> Rd18 Singapore Grand Prix</h2>
 <p><a href="./2025/2025-Rd18-Singapore-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -286,8 +309,8 @@ LapTime CSV</a><br />
 <a href="./2025/2025-Rd18-Singapore-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a><br />
 <a href="https://youtu.be/4-B7-cVV5Ww">GAP Graph animation</a></p>
-<h2 data-number="1.3" id="rd17-azerbaijan-grand-prix"><span
-class="header-section-number">1.3</span> Rd17 Azerbaijan Grand Prix</h2>
+<h2 data-number="1.4" id="rd17-azerbaijan-grand-prix"><span
+class="header-section-number">1.4</span> Rd17 Azerbaijan Grand Prix</h2>
 <p><a href="./2025/2025-Rd17-Azerbaijan-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -326,8 +349,8 @@ LapTime CSV</a><br />
 <a href="./2025/2025-Rd17-Azerbaijan-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a><br />
 <a href="https://youtu.be/1LDKJ6FpTyo">GAP Graph animation</a></p>
-<h2 data-number="1.4" id="rd16-italian-grand-prix"><span
-class="header-section-number">1.4</span> Rd16 Italian Grand Prix</h2>
+<h2 data-number="1.5" id="rd16-italian-grand-prix"><span
+class="header-section-number">1.5</span> Rd16 Italian Grand Prix</h2>
 <p><a
 href="./2025/2025-Rd16-Italian-Grand-Prix-Practice-1_incomplete.pdf">FP1:
 Plot PDF</a><br />
@@ -367,8 +390,8 @@ LapTime CSV</a><br />
 Control Message CSV</a><br />
 <a href="https://youtu.be/tK2MeL8c098?si=GErzJTL2uP7xuD2B">GAP Graph
 animation</a></p>
-<h2 data-number="1.5" id="rd15-dutch-grand-prix"><span
-class="header-section-number">1.5</span> Rd15 Dutch Grand Prix</h2>
+<h2 data-number="1.6" id="rd15-dutch-grand-prix"><span
+class="header-section-number">1.6</span> Rd15 Dutch Grand Prix</h2>
 <p><a href="./2025/2025-Rd15-Dutch-Grand-Prix-Practice-1.pdf">FP1: Plot
 PDF</a><br />
 <a href="./2025/2025-Rd15-Dutch-Grand-Prix-Practice-1_laptime.csv">FP1:
@@ -401,8 +424,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd15-Dutch-Grand-Prix-Race_rcm.csv">R:Race Control
 Message CSV</a></p>
-<h2 data-number="1.6" id="rd14-hungarian-grand-prix"><span
-class="header-section-number">1.6</span> Rd14 Hungarian Grand Prix</h2>
+<h2 data-number="1.7" id="rd14-hungarian-grand-prix"><span
+class="header-section-number">1.7</span> Rd14 Hungarian Grand Prix</h2>
 <p><a href="./2025/2025-Rd14-Hungarian-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -440,8 +463,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd14-Hungarian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.7" id="rd13-belgian-grand-prix"><span
-class="header-section-number">1.7</span> Rd13 Belgian Grand Prix</h2>
+<h2 data-number="1.8" id="rd13-belgian-grand-prix"><span
+class="header-section-number">1.8</span> Rd13 Belgian Grand Prix</h2>
 <p><a href="./2025/2025-Rd13-Belgian-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -481,8 +504,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd13-Belgian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.8" id="rd12-british-grand-prix"><span
-class="header-section-number">1.8</span> Rd12 British Grand Prix</h2>
+<h2 data-number="1.9" id="rd12-british-grand-prix"><span
+class="header-section-number">1.9</span> Rd12 British Grand Prix</h2>
 <p><a href="./2025/2025-Rd12-British-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -518,8 +541,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd12-British-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.9" id="rd11-austrian-grand-prix"><span
-class="header-section-number">1.9</span> Rd11 Austrian Grand Prix</h2>
+<h2 data-number="1.10" id="rd11-austrian-grand-prix"><span
+class="header-section-number">1.10</span> Rd11 Austrian Grand Prix</h2>
 <p><a href="./2025/2025-Rd11-Austrian-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -556,8 +579,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd11-Austrian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.10" id="rd10-canadian-grand-prix"><span
-class="header-section-number">1.10</span> Rd10 Canadian Grand Prix</h2>
+<h2 data-number="1.11" id="rd10-canadian-grand-prix"><span
+class="header-section-number">1.11</span> Rd10 Canadian Grand Prix</h2>
 <p><a href="./2025/2025-Rd10-Canadian-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -594,8 +617,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd10-Canadian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.11" id="rd09-spanish-grand-prix"><span
-class="header-section-number">1.11</span> Rd09 Spanish Grand Prix</h2>
+<h2 data-number="1.12" id="rd09-spanish-grand-prix"><span
+class="header-section-number">1.12</span> Rd09 Spanish Grand Prix</h2>
 <p><a href="./2025/2025-Rd09-Spanish-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -631,8 +654,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd09-Spanish-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.12" id="rd08-monaco-grand-prix"><span
-class="header-section-number">1.12</span> Rd08 Monaco Grand Prix</h2>
+<h2 data-number="1.13" id="rd08-monaco-grand-prix"><span
+class="header-section-number">1.13</span> Rd08 Monaco Grand Prix</h2>
 <p><a href="./2025/2025-Rd08-Monaco-Grand-Prix-Practice-1.pdf">FP1: Plot
 PDF</a><br />
 <a href="./2025/2025-Rd08-Monaco-Grand-Prix-Practice-1_laptime.csv">FP1:
@@ -665,8 +688,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd08-Monaco-Grand-Prix-Race_rcm.csv">R:Race Control
 Message CSV</a></p>
-<h2 data-number="1.13" id="rd07-emilia-romagna-grand-prix"><span
-class="header-section-number">1.13</span> Rd07 Emilia Romagna Grand
+<h2 data-number="1.14" id="rd07-emilia-romagna-grand-prix"><span
+class="header-section-number">1.14</span> Rd07 Emilia Romagna Grand
 Prix</h2>
 <p><a
 href="./2025/2025-Rd07-Emilia-Romagna-Grand-Prix-Practice-1.pdf">FP1:
@@ -714,8 +737,8 @@ href="./2025/2025-Rd07-Emilia-Romagna-Grand-Prix-Race_laptime.csv">R:ALL
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd07-Emilia-Romagna-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.14" id="rd06-miami-grand-prix"><span
-class="header-section-number">1.14</span> Rd06 Miami Grand Prix</h2>
+<h2 data-number="1.15" id="rd06-miami-grand-prix"><span
+class="header-section-number">1.15</span> Rd06 Miami Grand Prix</h2>
 <p><a href="./2025/2025-Rd06-Miami-Grand-Prix-Practice-1.pdf">FP1: Plot
 PDF</a><br />
 <a href="./2025/2025-Rd06-Miami-Grand-Prix-Practice-1_laptime.csv">FP1:
@@ -752,8 +775,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd06-Miami-Grand-Prix-Race_rcm.csv">R:Race Control
 Message CSV</a></p>
-<h2 data-number="1.15" id="rd05-saudi-arabian-grand-prix"><span
-class="header-section-number">1.15</span> Rd05 Saudi Arabian Grand
+<h2 data-number="1.16" id="rd05-saudi-arabian-grand-prix"><span
+class="header-section-number">1.16</span> Rd05 Saudi Arabian Grand
 Prix</h2>
 <p><a
 href="./2025/2025-Rd05-Saudi-Arabian-Grand-Prix-Practice-1.pdf">FP1:
@@ -800,8 +823,8 @@ href="./2025/2025-Rd05-Saudi-Arabian-Grand-Prix-Race_laptime.csv">R:ALL
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd05-Saudi-Arabian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.16" id="rd04-bahrain-grand-prix"><span
-class="header-section-number">1.16</span> Rd04 Bahrain Grand Prix</h2>
+<h2 data-number="1.17" id="rd04-bahrain-grand-prix"><span
+class="header-section-number">1.17</span> Rd04 Bahrain Grand Prix</h2>
 <p><a href="./2025/2025-Rd04-Bahrain-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -829,8 +852,8 @@ PDF</a><br />
 laptime csv</a><br />
 <a href="./2025/2025-Rd04-Bahrain-Grand-Prix-Qualifying_rcm.csv">Q: race
 control message csv</a></p>
-<h2 data-number="1.17" id="rd03-japanese-grand-prix"><span
-class="header-section-number">1.17</span> Rd03 Japanese Grand Prix</h2>
+<h2 data-number="1.18" id="rd03-japanese-grand-prix"><span
+class="header-section-number">1.18</span> Rd03 Japanese Grand Prix</h2>
 <p><a href="./2025/2025-Rd03-Japanese-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -867,8 +890,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd03-Japanese-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.18" id="rd02-chinese-grand-prix"><span
-class="header-section-number">1.18</span> Rd02 Chinese Grand Prix</h2>
+<h2 data-number="1.19" id="rd02-chinese-grand-prix"><span
+class="header-section-number">1.19</span> Rd02 Chinese Grand Prix</h2>
 <p><a href="./2025/2025-Rd02-Chinese-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
 <a
@@ -908,8 +931,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd02-Chinese-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.19" id="rd01-australian-grand-prix"><span
-class="header-section-number">1.19</span> Rd01 Australian Grand
+<h2 data-number="1.20" id="rd01-australian-grand-prix"><span
+class="header-section-number">1.20</span> Rd01 Australian Grand
 Prix</h2>
 <p><a href="./2025/2025-Rd01-Australian-Grand-Prix-Practice-1.pdf">FP1:
 Plot PDF</a><br />
@@ -948,8 +971,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd01-Australian-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="1.20" id="pre-season-test"><span
-class="header-section-number">1.20</span> Pre-season test</h2>
+<h2 data-number="1.21" id="pre-season-test"><span
+class="header-section-number">1.21</span> Pre-season test</h2>
 <p><a href="./2025/2025-Pre-Season-Testing-1-1.pdf">Day1:Plot
 PDF</a><br />
 <a href="./2025/2025-Pre-Season-Testing-1-1_laptime.csv">Day1:laptime
@@ -1129,7 +1152,7 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2024/2024-Rd21-São-Paulo-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a></p>
-<h2 data-number="2.5" id="rd20-mexico-city-grand-prix"><span
+<h2 data-number="2.5" id="rd20-mexico-city-grand-prix-1"><span
 class="header-section-number">2.5</span> Rd20 Mexico City Grand
 Prix</h2>
 <p><a href="./2024/2024-Rd20-Mexico-City-Grand-Prix-Practice-1.pdf">FP1:
