Add 2025 Rd20 Mexico City GP Race

--- a/index.html
+++ b/index.html
@@ -230,6 +230,16 @@ href="./2025/2025-Rd20-Mexico-City-Grand-Prix-Qualifying_laptime.csv">Q:
 laptime csv</a><br />
 <a href="./2025/2025-Rd20-Mexico-City-Grand-Prix-Qualifying_rcm.csv">Q:
 race control message csv</a></p>
+<p><a href="./2025/2025-Rd20-Mexico-City-Grand-Prix-Race.pdf">R:Plots
+PDF</a><br />
+<a
+href="./2025/2025-Rd20-Mexico-City-Grand-Prix-Race_gaptime.csv">R:GapTime
+CSV </a><br />
+<a href="./2025/2025-Rd20-Mexico-City-Grand-Prix-Race_laptime.csv">R:ALL
+LapTime CSV</a><br />
+<a href="./2025/2025-Rd20-Mexico-City-Grand-Prix-Race_rcm.csv">R:Race
+Control Message CSV</a><br />
+<a href="https://youtu.be/RN9j9jR0XGo">GAP Graph animation</a></p>
 <h2 data-number="1.2" id="rd19-united-states-grand-prix"><span
 class="header-section-number">1.2</span> Rd19 United States Grand
 Prix</h2>
