--- a/index.html
+++ b/index.html
@@ -217,6 +217,24 @@ laptime csv</a><br />
 <a
 href="./2025/2025-Rd21-Sao-Paulo-Grand-Prix-Sprint-Qualifying_rcm.csv">SQ:
 race control message csv</a></p>
+<p><a href="./2025/2025-Rd21-Sao-Paulo-Grand-Prix-Sprint.pdf">S:Plots
+PDF</a><br />
+<a
+href="./2025/2025-Rd21-Sao-Paulo-Grand-Prix-Sprint_gaptime.csv">S:GapTime
+CSV </a><br />
+<a href="./2025/2025-Rd21-Sao-Paulo-Grand-Prix-Sprint_laptime.csv">S:ALL
+LapTime CSV</a><br />
+<a href="./2025/2025-Rd21-Sao-Paulo-Grand-Prix-Sprint_rcm.csv">S:Race
+Control Message CSV</a><br />
+<a href="https://youtu.be/O18gqXMms2g">SPRINT GAP Graph
+animation</a></p>
+<p><a href="./2025/2025-Rd21-Sao-Paulo-Grand-Prix-Qualifying.pdf">Q:
+Plot PDF</a><br />
+<a
+href="./2025/2025-Rd21-Sao-Paulo-Grand-Prix-Qualifying_laptime.csv">Q:
+laptime csv</a><br />
+<a href="./2025/2025-Rd21-Sao-Paulo-Grand-Prix-Qualifying_rcm.csv">Q:
+race control message csv</a></p>
 <h2 data-number="1.2" id="rd20-mexico-city-grand-prix"><span
 class="header-section-number">1.2</span> Rd20 Mexico City Grand
 Prix</h2>
