Add 2025 Rd22 Las Vegas GP Race

--- a/index.html
+++ b/index.html
@@ -232,6 +232,16 @@ href="./2025/2025-Rd22-Las-Vegas-Grand-Prix-Qualifying_laptime.csv">Q:
 laptime csv</a><br />
 <a href="./2025/2025-Rd22-Las-Vegas-Grand-Prix-Qualifying_rcm.csv">Q:
 race control message csv</a></p>
+<p><a href="./2025/2025-Rd22-Las-Vegas-Grand-Prix-Race.pdf">R:Plots
+PDF</a><br />
+<a
+href="./2025/2025-Rd22-Las-Vegas-Grand-Prix-Race_gaptime.csv">R:GapTime
+CSV </a><br />
+<a href="./2025/2025-Rd22-Las-Vegas-Grand-Prix-Race_laptime.csv">R:ALL
+LapTime CSV</a><br />
+<a href="./2025/2025-Rd22-Las-Vegas-Grand-Prix-Race_rcm.csv">R:Race
+Control Message CSV</a><br />
+<a href="https://youtu.be/WdznIVSlc3g">GAP Graph animation</a></p>
 <h2 data-number="1.2" id="rd21-sao-paulo-grand-prix"><span
 class="header-section-number">1.2</span> Rd21 Sao Paulo Grand Prix</h2>
 <p><a href="./2025/2025-Rd21-Sao-Paulo-Grand-Prix-Practice-1.pdf">FP1:
@@ -277,7 +287,8 @@ CSV </a><br />
 LapTime CSV</a><br />
 <a href="./2025/2025-Rd21-Sao-Paulo-Grand-Prix-Race_rcm.csv">R:Race
 Control Message CSV</a><br />
-<a href="https://youtu.be/ApcATC9X2-c">GAP Graph animation</a></p>
+<a href="https://youtu.be/WdznIVSlc3g?si=BgVK6ifnvmc_W2X7">GAP Graph
+animation</a></p>
 <h2 data-number="1.3" id="rd20-mexico-city-grand-prix"><span
 class="header-section-number">1.3</span> Rd20 Mexico City Grand
 Prix</h2>
