--- a/index.html
+++ b/index.html
@@ -222,6 +222,16 @@ laptime csv</a><br />
 <a
 href="./2025/2025-Rd23-Qatar-Grand-Prix-Sprint-Qualifying_rcm.csv">SQ:
 race control message csv</a></p>
+<p><a href="./2025/2025-Rd23-Qatar-Grand-Prix-Sprint.pdf">S:Plots
+PDF</a><br />
+<a href="./2025/2025-Rd23-Qatar-Grand-Prix-Sprint_gaptime.csv">S:GapTime
+CSV </a><br />
+<a href="./2025/2025-Rd23-Qatar-Grand-Prix-Sprint_laptime.csv">S:ALL
+LapTime CSV</a><br />
+<a href="./2025/2025-Rd23-Qatar-Grand-Prix-Sprint_rcm.csv">S:Race
+Control Message CSV</a><br />
+<a href="https://youtu.be/FXwe_Qn5XwA">SPRINT GAP Graph
+animation</a></p>
 <h2 data-number="1.2" id="rd22-las-vegas-grand-prix"><span
 class="header-section-number">1.2</span> Rd22 Las Vegas Grand Prix</h2>
 <p><a href="./2025/2025-Rd22-Las-Vegas-Grand-Prix-Practice-1.pdf">FP1:
