Add 2025 Rd23 Qatar GP QF

--- a/index.html
+++ b/index.html
@@ -232,6 +232,12 @@ LapTime CSV</a><br />
 Control Message CSV</a><br />
 <a href="https://youtu.be/FXwe_Qn5XwA">SPRINT GAP Graph
 animation</a></p>
+<p><a href="./2025/2025-Rd23-Qatar-Grand-Prix-Qualifying.pdf">Q: Plot
+PDF</a><br />
+<a href="./2025/2025-Rd23-Qatar-Grand-Prix-Qualifying_laptime.csv">Q:
+laptime csv</a><br />
+<a href="./2025/2025-Rd23-Qatar-Grand-Prix-Qualifying_rcm.csv">Q: race
+control message csv</a></p>
 <h2 data-number="1.2" id="rd22-las-vegas-grand-prix"><span
 class="header-section-number">1.2</span> Rd22 Las Vegas Grand Prix</h2>
 <p><a href="./2025/2025-Rd22-Las-Vegas-Grand-Prix-Practice-1.pdf">FP1:
