--- a/index.html
+++ b/index.html
@@ -209,6 +209,7 @@ class="toc-section-number">3</span> Previous season</a></li>
 </nav>
 <h1 data-number="1" id="season"><span
 class="header-section-number">1</span> 2025 Season</h1>
+<p><a href="./2025/TARONOTE_2025.csv">エグいてー</a></p>
 <h2 data-number="1.1" id="rd24-abu-dhabi-grand-prix"><span
 class="header-section-number">1.1</span> Rd24 Abu Dhabi Grand Prix</h2>
 <p><a href="./2025/2025-Rd24-Abu-Dhabi-Grand-Prix-Practice-1.pdf">FP1:
