Add Pre-Season test week1 day2

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@ class="toc-section-number">1.1</span> Pre-season test</a>
 <ul>
 <li><a href="#week1-day1" id="toc-week1-day1"><span
 class="toc-section-number">1.1.1</span> Week1 Day1</a></li>
+<li><a href="#week1-day2" id="toc-week1-day2"><span
+class="toc-section-number">1.1.2</span> Week1 Day2</a></li>
 </ul></li>
 </ul></li>
 <li><a href="#season-1" id="toc-season-1"><span
@@ -227,6 +229,13 @@ class="header-section-number">1.1.1</span> Week1 Day1</h3>
 <a href="./2026/2026-Pre-Season-Testing-1-1_laptime.csv">Laptime
 CSV</a><br />
 <a href="./2026/2026-Pre-Season-Testing-1-1_rcm.csv">RaceControl Message
+CSV</a></p>
+<h3 data-number="1.1.2" id="week1-day2"><span
+class="header-section-number">1.1.2</span> Week1 Day2</h3>
+<p><a href="./2026/2026-Pre-Season-Testing-1-2.pdf">Plot PDF</a><br />
+<a href="./2026/2026-Pre-Season-Testing-1-2_laptime.csv">Laptime
+CSV</a><br />
+<a href="./2026/2026-Pre-Season-Testing-1-2_rcm.csv">RaceControl Message
 CSV</a></p>
 <h1 data-number="2" id="season-1"><span
 class="header-section-number">2</span> 2025 Season</h1>
